# ARES

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  alembic.ini  pyproject.toml  requirements-lock.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
ares/: __init__.py  __version__.py
ares/api/: __init__.py  graph.py  rbac.py  server.py
ares/artifact_intel/: __init__.py  correlation.py  engine.py
ares/checkpoint/: __init__.py  manager.py
ares/cli/: __init__.py  _store.py  main.py  typer_main.py
ares/collab/: __init__.py  manager.py
ares/core/: __init__.py  campaign.py  capabilities.py  config.py  context.py  cvss.py  di.py  engine.py  errors.py  execution_chains.py  logger.py  noise.py  notifier.py  runtime_state.py  sandbox.py  security.py  signing.py  tracing.py  validator.py
ares/credential/: __init__.py  cracker.py  reuse.py  vault.py
ares/db/: __init__.py  database.py  postgres.py  schema.py
ares/execution/: __init__.py  executor.py
ares/fingerprint/: __init__.py  engine.py
ares/goal/: __init__.py  adaptive.py  engine.py  planner.py
ares/graph/: __init__.py  attack_graph.py
ares/knowledge/: __init__.py  base.py
ares/marketplace/: __init__.py  installer.py
ares/modules/: __init__.py  base.py  params.py  sdk.py
ares/network/: __init__.py  model.py
ares/normalize/: __init__.py  artifacts.py
ares/pivot/: __init__.py  infrastructure.py
ares/replay/: __init__.py  engine.py
ares/sdk/: __init__.py
ares/security/: __init__.py  audit.py
ares/service_intel/: __init__.py  engine.py
ares/state/: __init__.py  target_state.py
ares/strategy/: __init__.py  enforcer.py  engine.py  knowledge_base.py  models.py  notifier.py  target_state.py
ares/technique/: __init__.py  library.py
ares/telemetry/: __init__.py  collector.py
ares/worker/: __init__.py  _subprocess_worker.py  cluster.py  controller.py  isolation.py
docker/: Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  nginx.conf
docs/: ENGINE_FLOW.md  MODULE_GUIDE.md  api-reference.md  architecture.md  community-posts.md  dashboard-guide.md  engine_design.md  frontend.md  github-publish-guide.md  module-development.md  module_sdk.md  modules.md  security-model.md  validation-lab.md  worker_architecture.md
docs/examples/: example_http_enum.py
example_modules/: example_ad_users.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.app.config.mjs
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
migrations/: __init__.py  env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py  0002_add_cvss_to_findings.py  0003_add_rate_limit_tracking.py  0004_add_revoked_access_tokens.py  0005_add_trace_id_to_findings.py  0006_rename_cracked_value_to_enc.py
scripts/: run_validation_lab.ps1  setup.sh  validation_lab.py
tests/: conftest.py
tests/integration/: test_api_post.py  test_campaign.py
tests/simulation/: test_scenarios.py
tests/unit/: test_ad_bind_behavior.py  test_ad_dependency_preflight.py  test_adaptive_opsec.py  test_api_endpoints.py  test_capabilities_rbac_planner.py  test_cli_doctor.py  test_cli_reporting_goal_planning.py  test_core_edge_cases.py  test_core_infrastructure.py  test_coverage_gaps.py  test_dashboard_dev_launcher.py  test_data_encryptor.py  test_engine.py  test_execution_chains.py  test_executor_pivot_lateral.py  test_final_hardening.py  test_hardening.py  test_module_contracts.py  test_module_coverage.py  test_module_execute_adapters.py  test_property_based.py  (+8 more)
(+106 files in other folders)
